--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.62MB/s(Youtube:不良林), server: iepl-zebra.19900101.xyz, port: 4501, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-475.4KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-245.0KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
-  - {name: 🇨🇳 中国-236.9KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-201.7KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-202.9KB/s(Youtube:不良林), server: iepl-zebra.19900101.xyz, port: 4501, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-610.0KB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-475.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-475.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-475.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-475.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-475.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-475.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-475.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-236.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
