--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,27 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-202.9KB/s(Youtube:不良林), server: iepl-zebra.19900101.xyz, port: 4501, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.63MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-610.0KB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11001, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +36,20 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +65,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-202.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-610.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
