--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,7 +5,7 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-454.0KB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11001, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.83MB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11001, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-578.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇨🇭 瑞士-1.10MB/s(Youtube:不良林), server: 185.126.116.125, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
@@ -15,7 +15,7 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-454.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
@@ -24,7 +24,7 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-454.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
@@ -34,7 +34,7 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-454.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
@@ -48,7 +48,7 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-454.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
@@ -57,7 +57,7 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-454.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
@@ -67,7 +67,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-454.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
@@ -86,7 +86,7 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-454.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
