--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,9 +6,8 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-6.83MB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11001, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-578.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇭 瑞士-1.10MB/s(Youtube:不良林), server: 185.126.116.125, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-421.5KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1150, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -16,18 +15,16 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -35,9 +32,8 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -49,18 +45,16 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -68,9 +62,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -87,9 +80,8 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.2KB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
