--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,35 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.83MB/s(Youtube:不良林), server: smart.19900101.xyz, port: 11001, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-421.5KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1150, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.52MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50062, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇳 中国-8.80MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50055, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇳 中国-12.01MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50052, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇳 中国-2.79MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50065, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇦 加拿大-848.1KB/s(Youtube:不良林), server: ca1.trojan.tel, port: 443, type: trojan, password: f736834f-1fc8-4738-9884-9afe0eb0d818, sni: ca1.trojan.tel, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.59MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50058, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇳 中国-6.62MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50054, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇳 中国-1000.2KB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50061, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇳 中国-3.55MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50057, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
+  - {name: 🇨🇳 中国-3.31MB/s(Youtube:不良林), server: iepl.googo.cyou, port: 50064, type: ss, cipher: aes-128-gcm, password: 4b123507-254e-49f9-b56e-eda890788938}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1000.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1000.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1000.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -44,26 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1000.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1000.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1000.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.79MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-848.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1000.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
